[package]
name = "rs-terminal-graph-plot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "terminal_graph_plot"
path = "src/lib/lib.rs"

[dependencies]
crossterm = {version = "0.25.0", optional = true}
rs-math-text-parser = { git = "https://github.com/Si1veR123/rs-math-text-parser", optional = true }

[features]
interactive = ["crossterm", "rs-math-text-parser"]

[[bin]]
name = "terminal_graph_plot_bin"
required-features = ["interactive"]
path = "src/main.rs"
